# PhaseWrap-RoPE

./: .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  PATENTS.md  README.md  SECURITY.md  pyproject.toml  requirements-review.txt
docs/: index.md  reproducible-environment.md  roadmap.md
epics/: E003-bounded-position-content-compositionality.md  E004-bounded-content-alias-disambiguation.md  E005-bounded-shared-memory-multi-query-selection.md  E008-bounded-exception-conditioned-reference-arbitration.md  E010-bounded-nested-scope-shadow-resolution.md  E011-bounded-clause-intersection-reference-selection.md
logs/: checkpoint.json
scripts/: __init__.py  check_readme_verifier_output.py  diagnose_stage4_cx_portability.py  estimate_stage4_classical_compute_cost.py  export_publication_paper.py  generate_publication_figures.py  prepare_stage4_bitstring_calibration_packets.py  prepare_stage4_cx_rehearsal.py  preregister_stage4_replication_packets.py  quandela_cloud_check.py  run_automated_stage_gates.py  run_braket_hardware_smoke.py  run_stage100_matched_cx_encoding_packet_freezer.py  run_stage101_known_state_calibration_gate.py  run_stage102_calibration_execution_package.py  run_stage103_robustness_metric_preregistration.py  run_stage105_independent_rerun_protocol.py  run_stage107_window_execution_orchestrator.py  run_stage108_provider_configuration_handoff.py  run_stage109_window_evidence_intake_validator.py  run_stage110_replicated_advantage_claim_gate.py  run_stage111_provider_sdk_backend_discovery.py  (+155 more)
tests/: conftest.py  (+181 more)
(+8250 files in other folders)
