[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qrope"
version = "0.1.0"
description = "PhaseWrap-RoPE phase-wrap evidence and hardware-validation tooling"
readme = "README.md"
license = { text = "AGPL-3.0-only" }
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "numpy>=1.24",
  "pylatexenc>=2.10",
  "requests>=2.31"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
figures = [
  "matplotlib>=3.8",
]
ibm = [
  "qiskit>=1.0",
  "qiskit-ibm-runtime>=0.25",
]
braket = [
  "amazon-braket-sdk>=1.90",
  "boto3>=1.34",
]
quandela = [
  "perceval-quandela>=0.12",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
